traefik/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-vm-example
spec:
  restartPolicy: Always  # Ensures the pod restarts if it crashes or stops
  containers:
    - name: pod-container
      image: citatech/pod-base-image:latest
      command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]  # Keeps the pod running
      ports:
        - containerPort: 8080
