traefik/test-pod-with-curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-test
spec:
  containers:
  - name: network-tools
    image: nicolaka/netshoot
    command:
    - sleep
    - "3600"
