traefik/dashboard-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.endpoint.demo-domain.online`)
      kind: Rule
      services:
        - name: traefik-dashboard-service
          port: 8080
